--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: lsembandwidth
-Title: What the Package Does (One Line, Title Case)
+Title: Calculates Optimal Bandwidth For LSEM models
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Xanthe",
+           family = "Matthijssen",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "xanthematthijssen@gmail.com",
+           comment = c(ORCID = "0000-0001-7332-8072"))
+Description: Calculates Optimal Bandwidth For LSEM models.
 License: MIT + file LICENSE
+Depends: R (>= 3.6.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
