--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,9 @@ Authors@R:
 Description: Calculates Optimal Bandwidth For LSEM models.
 License: MIT + file LICENSE
 Depends: R (>= 3.6.0)
+Imports:
+  sirt (>= 3.9.0),
+  lavaan(>= 0.6.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
