--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,11 @@ License: MIT + file LICENSE
 Depends: R (>= 3.6.0)
 Imports:
   sirt (>= 3.9.0),
-  lavaan(>= 0.6.0)
+  lavaan(>= 0.6.0),
+  magrittr (>= 1.5.0),
+  purrr (>= 0.3.3),
+  dplyr (>= 0.8.5),
+  rlang (>= 0.4.5) 
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
