--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
   magrittr (>= 1.5.0),
   purrr (>= 0.3.3),
   dplyr (>= 0.8.5),
-  rlang (>= 0.4.5) 
+  rlang (>= 0.4.5),
+  tidyr (>= 1.0.2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
