--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
   rlang (>= 0.4.5),
   tidyr (>= 1.0.2), 
   mvtnorm (>= 1.1.0),
+  extraDistr (>= 1.8.11)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
